Bug 827521 - Work around spurious operator ambiguity errors in buggy versions of Clang. r=longsonr